Fix org desc clipping into page content

--- a/frontend/static/dashboard.css
+++ b/frontend/static/dashboard.css
@@ -85,6 +85,7 @@ select {
   visibility: hidden;
   max-height: 0 !important;
   max-width: 0 !important;
+  padding: 0 !important;
 }
 
 .container {
@@ -96,11 +97,19 @@ select {
   background-color: #555555;
 }
 
-.organization__name, .organization__description {
+.organization__name {
   padding-top: 8px;
   padding-right: 24px;
   margin-bottom: -24px;
-  font-size: 900;
+  text-decoration: none;
+  text-align: right;
+  color: var(--primary-color);
+}
+
+.organization__description {
+  padding-top: 8px;
+  padding-right: 24px;
+  margin-bottom: 24px;
   text-decoration: none;
   text-align: right;
   color: var(--primary-color);
